# QuantLab

./: .dockerignore  .gitignore  2026-03-24-105115-implement-the-following-plan.txt  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  quant.ps1  quant.sh  requirements.txt  run_backtest.py  run_live.py  start-mac.command  start-windows.cmd  stop-mac.command  stop-windows.cmd
.claude/: settings.local.json
config/: quant.env.example  quant.prod.env.example
configs/: backtest_ma_cross.yaml  live_ma_cross.yaml
docs/: ARCHITECTURE.md  DATA_ARCHITECTURE.md  DEPLOYMENT.md  MACOS_SETUP.md  QUANTLAB_GUIDE.md  UI_ACCEPTANCE.md  data_v2.md  抄底策略.md
quant/: config.py
quant/core/: __init__.py  bar.py  events.py  order.py  portfolio.py  position.py
quant/data/: akshare_feed.py  baostock_feed.py  base.py  csv_feed.py  schema.py  symbol_filter.py  symbols.py  tdx_feed.py  tushare_feed.py  updater.py
quant/engine/: backtest.py  live.py
quant/execution/: base.py  futu.py  simulated.py
quant/risk/: base.py  basic.py
quant/screening/: __init__.py  composer.py  factors.py  patterns.py  scoring.py
quant/strategy/: base.py  registry.py
quant/utils/: logger.py
scripts/: bench_data_v2.py  benchmark_data_sources.py  diagnose_tdx_symbols.py  dip_buy_smoke.py  fix_volume_units.py  migrate_data_v2.py  repair_volume_units.py  seed_demo_data.py  smoke_tdx.py  verify_clone_start.py  verify_config_contract.py  verify_deployment_config.py  verify_frontend_text_smoke.py  verify_frontend_ui_inventory.py  verify_launch_scripts.py  verify_runtime_smoke.py  verify_strategy_consistency.py  verify_windows_launch_smoke.py
server/: main.py
server/agent/: graph.py  memory.py  model.py  prompts.py  quant_skill.py  router.py  schemas.py
server/models/: backtest.py  factor.py  market.py  risk.py  screening.py
server/routers/: backtest.py  factors.py  (+9 more)
tests/: test_api_contract.py  test_backtest_grid.py  test_config.py  test_demo_data_seed.py  test_research_service.py  test_strategy_registry.py  test_swing_dip_buy_samples.py  test_symbol_filter.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
(+70 files in other folders)
