[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.12",
    "baostock>=0.8",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "futu-api>=9.1",
    "apscheduler>=3.10",
    "pyyaml>=6.0",
    "quantstats>=0.0.62",
    "matplotlib>=3.7",
    "loguru>=0.7",
    "rich>=13.0",
    "pytdx>=1.72",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    # Agent framework
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langgraph>=0.4",
    "langgraph-supervisor>=0.0.10",
    # Vector database
    "pymilvus>=2.4",
    "milvus-lite>=2.4",
    # Embedding models
    "sentence-transformers>=3.0",
    "transformers>=4.40",
    "open-clip-torch>=2.24",
    # Chart generation for RAG
    "mplfinance>=0.12",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["quant*"]
